--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
      Blog End -->
 
 
-    <!-- Contact Start -->
+    <!-- Contact Start 
     <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -537,13 +537,14 @@
             </div>
         </div>
     </div>
-     <!--Contact End -->
+     Contact End -->
 
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
+                <a class="btn btn-light btn-social mr-2" href="mailto:gintaran217@gmail.com"><i class="fab fa-google"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://github.com/GintaraN"><i class="fab fa-github"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://wa.me/6285712062037" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/gintaran/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -555,7 +556,7 @@
                 <a class="text-white" href="#">Terms</a>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">FAQs</a>
-                <span class="px-3">|</span>
+                <span class="px-3">|</span>S
                 <a class="text-white" href="#">Help</a>
             </div>-->
             <p class="m-0">&copy 2023; <a class="text-white font-weight-bold" href="#">Gintara Nandiwardhana</a>. All Rights Reserved.
